Fix - showing error twice + Shifting of text on collapse/expand + Updated gif

--- a/style/base.css
+++ b/style/base.css
@@ -28,3 +28,13 @@
   border: dotted;
   border-width: 1px;
 }
+
+.skip-traceback > .fa-caret-right, .skip-traceback > .fa-caret-down  {
+  /*To fix shifting of text to the right when toggled*/
+  width:17px;
+  height:17px;
+}
+
+.skip-traceback  > .right-align {
+  float: right;
+}
